# aoc-24

./: .gitignore  CMakeLists.txt  README.md  leak-detection.md
inputs/: day3.txt
src/: day1.c  day1a.c  day1b.c  sandbox.c
src/day1/: day1a.c  day1b.c
src/day2/: day2a.c  day2b.c
src/day3/: day3a.c  day3b.c
src/day4/: day4a.c
src/libs/: file_lib.c  file_lib.h  string_map.c  string_map.h
